# python-vbr

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  env.rc.example  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: pytests.yml
NOTES/: generate_redcap_classfiles.txt
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: vbr.api.rst  vbr.pgrest.rst  vbr.rst  vbr.tableclasses.redcap.autogenerated.rst  vbr.tableclasses.rst  vbr.utils.redcaptasks.rst  vbr.utils.rst
files/: anatomy.json  assay_type.json  biosample.json  biosample_from_subject.json  biosample_in_collection.json  biosample_in_dataset.json  biosample_in_subject.json  box_type.json  collection.json  collection_in_collection.json  collection_type.json  contact.json  container.json  container_in_container.json  container_in_shipment.json  container_type.json  data_event.json  data_event_in_biosample.json  data_event_in_collection.json  data_event_in_container.json  data_event_in_dataset.json  data_event_in_measurement.json  data_event_in_shipment.json  data_event_in_subject.json  data_event_in_sys_event.json  data_type.json  dataset.json  dataset_defined_by_project.json  dataset_in_dataset.json  dataset_in_project.json  file.json  file_describes_biosample.json  file_describes_subject.json  file_format.json  file_from_file.json  file_in_data_event.json  file_in_dataset.json  file_in_file.json  location.json  measurement.json  (+121 more)
files-dbml/: README.md  dbml.dot  dbml.txt
src/scripts/: __init__.py  bootstrap_tables.py  clean_tables.py  cli.py  create_tables.py  dbml.py  definitions.py  drop_tables.py  dump_tables.py  export_tables.py  import_tables.py  load_tables.py  new_local_id.py  redcap_classfiles.py
src/scripts/bootstrap/: __init__.py  build_load_table_definitions.py  build_table_definitions.py  cli.py  (+9 more)
src/tests/: test_000_imports.py  test_001_definitions.py  test_002_utils_helpers_redcaptasks.py  test_400_pgrest_table.py  test_501_tableclass_system.py  test_502_redcap.py  test_700_utils_helpers_redcaptasks.py  test_definitions.py
src/vbr/: VBRConn.py  __init__.py  connection.py  constants.py  errors.py  record.py  tableclasses.py  unique_record.py  utils.py  vbr.py
(+265 files in other folders)
