[metadata]
# replace with your username:
name = python-vbr
version = 0.0.2
author = Matthew Vaughn
maintainer-email = "TACC Help" <help@tacc.cloud>
author-email = "TACC Opensource" <opensource@tacc.cloud>
description = Python package for working with Virtual Biospecimen Repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/A2CPS/python-vbr
project_urls =
    Bug Tracker = https://github.com/A2CPS/python-vbr/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    arrow
    cloudpickle
    hashids
    pytz
    pytest
    requests
    simplejson
    tapipy >=1.0.1
    Jinja2
    jsonschema ==3.2.0

[options.packages.find]
where = src

[options.package_data]
* = *.csv, *.json

[pylint]
disable = W0614,C0103,C0111
ignore = migrations
ignore-docstrings = yes
output-format = colorized

[yapf]
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true

[flake8]
ignore = F401,F403,F405,E501
